automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Sinatra MVC</title>
-  </head>
-
-  <body>
-    <h1>Index</h1>
-    <p> I love programming </p>
-  </body>
+<!DOCTYPE html> 
+<html> 
+<head>
+<meta charset="UTF-8"> 
+<link  rel="stylesheet" href="css/style.css"> #this tag liks css to html
+<title> 
+Fortune Teller
+</title>
+</head>
+<body> 
+<h3> Get a FORTUNE</h3>
+<h2> What is your name? </h2>
+<form method=POST> 
+<input type="text" name="user"> 
+<!--we want the varabile name to link to the application controller -->
+<br> 
+<input type="submit" value="GET YOUR FORTUNE"> 
+</form>
+</body>
 </html>
